# HeLLMind

./: .env.example  .gitignore  COLAB.md  CONTRIBUTING.md  README.md  ROADMAP.md  V2_SPEC.md  _vizdoom.ini  config.py  conftest.py  doom-cli  doom_cli.py  make_demo.py  make_gif.py  probe_map.py  pyproject.toml  pytest.ini  requirements.txt  run_ab.sh  run_dense.sh  run_doc_map02.sh  run_map02.sh  run_map07.sh  run_showcase.sh
assets/: README.md
doom/: campaign.py  entities.py  env.py  env_adapter.py  geodesic.py  geometry.py  overlay.py  rnd.py  wad_doors.py
instrumentation/: action_stats.py  game_vars.py  prometheus_exporter.py  stats_tracker.py
monitoring/: docker-compose.yml
reports/: CURRICULUM_RESULTS.md
results/: benchmark.csv  benchmark.json  benchmark.md  test-b-2026-06-03.md  test-c-2026-06-03.md  test-entropy-2026-06-03.md
rl/: algo.py  audit.py  autonomous.py  bc.py  benchmark.py  callbacks.py  campaign_callbacks.py  checkpoint_gc.py  coach_graph.py  control.py  coverage_callback.py  curriculum.py  demo_retrieval.py  enemy_callback.py  eureka.py  eval.py  experiment.py  frame_encoder.py  introspect.py  memory_callback.py  prioritized_replay_buffer.py  progress.py  progressive_curriculum.py  research_agent.py  status.py  train.py  train_dqn.py  tuning_registry.py
scripts/: backup_vault.sh  benchmark_device.py  interleaved_curriculum.py  make_demo.py  make_gif.py  probe_map.py  record_assist_demos.py  record_demo.py  run_ab.sh  run_baseline.sh  run_curriculum.sh  run_dense.sh  run_doc_map02.sh  run_map02.sh  run_map07.sh  run_phase2.sh  run_phase4.sh  (+3 more)
(+166 files in other folders)
