[project]
name = "hellmind"
version = "0.1.0"
description = "An RL agent plays Doom while a local LLM documents its own learning into an Obsidian knowledge graph."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Matheus Favaretto" }]
dependencies = [
    "vizdoom==1.3.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3.0",
    "sb3-contrib>=2.3.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "ollama>=0.4.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "tensorboard>=2.14",
    "tqdm>=4.66",
    "rich>=13.0",
]

[project.scripts]
doom-cli = "doom_cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
